Trying to fix layout issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,7 +72,7 @@
 	padding-bottom: 48px;
 	grid-row-gap: 32px;
 	grid-column-gap: 32px;
-	grid-template-columns: auto 60% auto;
+	grid-template-columns: auto 1fr auto;
 	
 }
 
@@ -90,14 +90,63 @@
 }
 
 .content-columns {
-	padding-left: 10%;
-	padding-right: 10%;
-	width: 80%
+	padding: 32px 32px 32px 32px;
+	width: 1300px;
+}
+
+
+.content-wrapper {
+	text-align: left;
+	display: grid;
+	grid-template-columns: 1fr 2fr 1fr;
+	grid-template-areas:
+		". content-area .";
+}
+
+.content-area {
+	grid-area: content-area;
+}
+
+.step-wrapper {
+	padding: 48px;
+	width: auto;
+	height: auto;
+}
+
+.step-title {
+	padding: 16px;
+	width: 100%;
+	height: auto;
+}
+
+.step-text {
+	padding: 16px;
+	width: 60%;
+	height: auto;
+}
+
+.step-image {
+	padding: 16px;
+	width: 40%;
+	height: auto;
+}
+
+.step-float-left {
+	float: left;
+}
+
+.step-float-right {
+	float: right;
+}
+
+.step-pad {
+	width: 100%;
+	height: 32px;
 }
 
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
-  padding: 15px;
+  padding: 10px;
   box-sizing: border-box;
   border-radius: 20px;
   font-family: monospace;
